--- a/monitoring_service/nbs/test_datasets.ipynb
+++ b/monitoring_service/nbs/test_datasets.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/tung.dao/tung/mlopsvn/code/mlops-crash-course-code/monitoring_service/nbs\n"
+      "/home/duy/mlops-crash-course/mlops-crash-course-code/monitoring_service/nbs\n"
      ]
     }
    ],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "4 2021-07-28 11:08:04.802  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "4 2021-07-28 11:08:04.802  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
        "4     uuid-4     [1005]               1"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "max    1005.000000   0.250000  0.250000        250.00000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "max    1005.000000   0.950000  0.950000       950.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
        "max          1.000000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +712,7 @@
        "ColumnMapping(target='trip_completed', prediction='prediction', datetime='datetime', id=None, numerical_features=['conv_rate', 'acc_rate', 'avg_daily_trips'], categorical_features=[], datetime_features=None, target_names=None, task=None, pos_label=1)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "4 2021-07-28 11:08:04.802           1               1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -927,13 +927,13 @@
       "classification_performance:quality | 0.4 | {'dataset': 'reference', 'metric': 'accuracy'}\n",
       "classification_performance:quality | 0.2 | {'dataset': 'reference', 'metric': 'precision'}\n",
       "classification_performance:quality | 0.5 | {'dataset': 'reference', 'metric': 'recall'}\n",
-      "classification_performance:quality | 0.28571428571428575 | {'dataset': 'reference', 'metric': 'f1'}\n",
+      "classification_performance:quality | 0.2857142857142857 | {'dataset': 'reference', 'metric': 'f1'}\n",
       "classification_performance:class_quality | 0.0 | {'dataset': 'reference', 'class_name': '0', 'metric': 'precision'}\n",
       "classification_performance:class_quality | 0.0 | {'dataset': 'reference', 'class_name': '0', 'metric': 'recall'}\n",
       "classification_performance:class_quality | 0.0 | {'dataset': 'reference', 'class_name': '0', 'metric': 'f1'}\n",
       "classification_performance:class_quality | 0.4 | {'dataset': 'reference', 'class_name': '1', 'metric': 'precision'}\n",
       "classification_performance:class_quality | 1.0 | {'dataset': 'reference', 'class_name': '1', 'metric': 'recall'}\n",
-      "classification_performance:class_quality | 0.5714285714285715 | {'dataset': 'reference', 'class_name': '1', 'metric': 'f1'}\n",
+      "classification_performance:class_quality | 0.5714285714285714 | {'dataset': 'reference', 'class_name': '1', 'metric': 'f1'}\n",
       "classification_performance:class_representation | 3 | {'dataset': 'reference', 'class_name': '0', 'type': 'target'}\n",
       "classification_performance:class_representation | 0 | {'dataset': 'reference', 'class_name': '0', 'type': 'prediction'}\n",
       "classification_performance:class_confusion | 0 | {'dataset': 'reference', 'class_name': '0', 'metric': 'TP'}\n",
@@ -953,13 +953,13 @@
       "classification_performance:quality | 0.4 | {'dataset': 'current', 'metric': 'accuracy'}\n",
       "classification_performance:quality | 0.2 | {'dataset': 'current', 'metric': 'precision'}\n",
       "classification_performance:quality | 0.5 | {'dataset': 'current', 'metric': 'recall'}\n",
-      "classification_performance:quality | 0.28571428571428575 | {'dataset': 'current', 'metric': 'f1'}\n",
+      "classification_performance:quality | 0.2857142857142857 | {'dataset': 'current', 'metric': 'f1'}\n",
       "classification_performance:class_quality | 0.0 | {'dataset': 'current', 'class_name': '0', 'metric': 'precision'}\n",
       "classification_performance:class_quality | 0.0 | {'dataset': 'current', 'class_name': '0', 'metric': 'recall'}\n",
       "classification_performance:class_quality | 0.0 | {'dataset': 'current', 'class_name': '0', 'metric': 'f1'}\n",
       "classification_performance:class_quality | 0.4 | {'dataset': 'current', 'class_name': '1', 'metric': 'precision'}\n",
       "classification_performance:class_quality | 1.0 | {'dataset': 'current', 'class_name': '1', 'metric': 'recall'}\n",
-      "classification_performance:class_quality | 0.5714285714285715 | {'dataset': 'current', 'class_name': '1', 'metric': 'f1'}\n",
+      "classification_performance:class_quality | 0.5714285714285714 | {'dataset': 'current', 'class_name': '1', 'metric': 'f1'}\n",
       "classification_performance:class_representation | 3 | {'dataset': 'current', 'class_name': '0', 'type': 'target'}\n",
       "classification_performance:class_representation | 0 | {'dataset': 'current', 'class_name': '0', 'type': 'prediction'}\n",
       "classification_performance:class_confusion | 0 | {'dataset': 'current', 'class_name': '0', 'metric': 'TP'}\n",
@@ -982,18 +982,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/tung.dao/miniconda3/envs/mlops-monitoring/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/Users/tung.dao/miniconda3/envs/mlops-monitoring/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/Users/tung.dao/miniconda3/envs/mlops-monitoring/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/Users/tung.dao/miniconda3/envs/mlops-monitoring/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/Users/tung.dao/miniconda3/envs/mlops-monitoring/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "/Users/tung.dao/miniconda3/envs/mlops-monitoring/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+      "/home/duy/miniconda3/envs/moni/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/home/duy/miniconda3/envs/moni/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/home/duy/miniconda3/envs/moni/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/home/duy/miniconda3/envs/moni/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/home/duy/miniconda3/envs/moni/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "/home/duy/miniconda3/envs/moni/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1531: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
@@ -1017,7 +1017,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('mlops-monitoring')",
+   "display_name": "moni",
    "language": "python",
    "name": "python3"
   },
@@ -1031,14 +1031,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.20"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "0924ada4a589b75ad84c87d4985e6df9b04f255eff6dfbed9b8422ba8cd93a76"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
