--- a/monitoring_service/nbs/prepare_datasets.ipynb
+++ b/monitoring_service/nbs/prepare_datasets.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/tung.dao/tung/mlopsvn/code/mlops-crash-course-code/monitoring_service/nbs\n"
+      "/home/duy/mlops-crash-course/mlops-crash-course-code/monitoring_service/nbs\n"
      ]
     }
    ],
@@ -1236,7 +1236,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('mlops-monitoring')",
+   "display_name": "moni",
    "language": "python",
    "name": "python3"
   },
@@ -1250,14 +1250,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.20"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "0924ada4a589b75ad84c87d4985e6df9b04f255eff6dfbed9b8422ba8cd93a76"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
