--- a/monitoring_service/nbs/prepare_datasets.ipynb
+++ b/monitoring_service/nbs/prepare_datasets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +221,7 @@
        "[1807 rows x 6 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "b2a01fb6-a721-43be-b441-c788432a2b42",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "max    1005.000000     0.998767     0.999445       998.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,108 +442,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>conv_rate</th>\n",
-       "      <th>acc_rate</th>\n",
-       "      <th>avg_daily_trips</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>5.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>0.148341</td>\n",
-       "      <td>0.189847</td>\n",
-       "      <td>151.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.084737</td>\n",
-       "      <td>0.080820</td>\n",
-       "      <td>91.47404</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.050000</td>\n",
-       "      <td>0.050000</td>\n",
-       "      <td>49.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>0.071032</td>\n",
-       "      <td>0.192864</td>\n",
-       "      <td>103.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>0.184332</td>\n",
-       "      <td>0.226879</td>\n",
-       "      <td>107.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>0.186341</td>\n",
-       "      <td>0.229490</td>\n",
-       "      <td>246.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>250.00000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       conv_rate  acc_rate  avg_daily_trips\n",
-       "count   5.000000  5.000000          5.00000\n",
-       "mean    0.148341  0.189847        151.00000\n",
-       "std     0.084737  0.080820         91.47404\n",
-       "min     0.050000  0.050000         49.00000\n",
-       "25%     0.071032  0.192864        103.00000\n",
-       "50%     0.184332  0.226879        107.00000\n",
-       "75%     0.186341  0.229490        246.00000\n",
-       "max     0.250000  0.250000        250.00000"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   conv_rate  acc_rate  avg_daily_trips\n",
+      "0   0.186341  0.226879              107\n",
+      "1   0.071032  0.229490              250\n",
+      "2   0.050000  0.192864              103\n",
+      "3   0.184332  0.050000               49\n",
+      "4   0.250000  0.250000              246\n"
+     ]
     }
    ],
    "source": [
     "normal_df = create_dataset(X)\n",
-    "normal_df.describe()"
+    "normal_df.describe()\n",
+    "print(normal_df)"
    ]
   },
   {
@@ -555,108 +473,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>conv_rate</th>\n",
-       "      <th>acc_rate</th>\n",
-       "      <th>avg_daily_trips</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "      <td>5.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>0.848341</td>\n",
-       "      <td>0.889847</td>\n",
-       "      <td>851.200000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>0.084737</td>\n",
-       "      <td>0.080820</td>\n",
-       "      <td>91.195943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>0.750000</td>\n",
-       "      <td>750.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>0.771032</td>\n",
-       "      <td>0.892864</td>\n",
-       "      <td>803.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>0.884332</td>\n",
-       "      <td>0.926879</td>\n",
-       "      <td>807.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>0.886341</td>\n",
-       "      <td>0.929490</td>\n",
-       "      <td>946.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>0.950000</td>\n",
-       "      <td>0.950000</td>\n",
-       "      <td>950.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       conv_rate  acc_rate  avg_daily_trips\n",
-       "count   5.000000  5.000000         5.000000\n",
-       "mean    0.848341  0.889847       851.200000\n",
-       "std     0.084737  0.080820        91.195943\n",
-       "min     0.750000  0.750000       750.000000\n",
-       "25%     0.771032  0.892864       803.000000\n",
-       "50%     0.884332  0.926879       807.000000\n",
-       "75%     0.886341  0.929490       946.000000\n",
-       "max     0.950000  0.950000       950.000000"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   conv_rate  acc_rate  avg_daily_trips\n",
+      "0   0.886341  0.926879              807\n",
+      "1   0.771032  0.929490              950\n",
+      "2   0.750000  0.892864              803\n",
+      "3   0.884332  0.750000              750\n",
+      "4   0.950000  0.950000              946\n"
+     ]
     }
    ],
    "source": [
     "drift_df = create_dataset(X_shift)\n",
-    "drift_df.describe()"
+    "drift_df.describe()\n",
+    "print(drift_df)"
    ]
   },
   {
@@ -668,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +621,7 @@
        "4 2021-07-23 05:00:00+00:00  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -796,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +759,7 @@
        "4 2021-07-23 05:00:00+00:00  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -979,7 +815,7 @@
        "array([0, 1, 0, 0, 1])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1000,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +938,7 @@
        "4     uuid-4     [1005]               1"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1117,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1029,7 @@
        "max          1.000000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,10 +1064,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['datetime', 'driver_id', 'conv_rate', 'acc_rate', 'avg_daily_trips', 'created']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data_cols)"
+   ]
   }
  ],
  "metadata": {
